2009-06-18 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: applied patch that adds more error descriptions.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-06-18 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: removed max http server limit.

2009-06-16 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: increase max http servers from 32 to 100 and return error
      if max servers reached.

2009-06-16 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: indent fixes.

2009-06-15 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed last commit that broke urls with port and query.

2009-06-11 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed #503. we didn't handle right urls like http://host:port?query.

2009-06-10 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: fixed compiler warnings.

2009-06-10 Alejandro Guerrieri <aguerrieri at kannel.org>
    * test/.cvsignore utils/.cvsignore: ignoring test_date and decode_emimsg

2009-06-10 Alejandro Guerrieri <aguerrieri at kannel.org>
    * gw/smsc/smsc_http.c: removed the dlr-url field as a requirement for
    incoming dlrs on kannel smsc-type

2009-06-09 Alejandro Guerrieri <aguerrieri at kannel.org>
    * gw/smsc/smsc_http.c gwlib/cfg.def doc/userguide/userguide.xml: added
      support for mo parameters, return messages and codes configuration.

2009-06-09 Alexander Malysh <amalysh at kannel.org>
    * gw/ota_compiler.c: fixed #484 and reordered syncsettings to be in line
      with OTA spec.

2009-06-09 Alexander Malysh <amalysh at kannel.org>
    * gw/ota_compiler.c: revert of re-order INLINE attributs in oma_ota_attributes
       because code assume VALUE INLINE to be last in table.
       Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for this patch.

2008-10-22  Stipe Tolj  <stolj at kannel.org>
    * gw/ota_compiler.c: re-order INLINE attributs in oma_ota_attributes struct